ongoing swagger documentation
