# docs/swagger.json
@@ -7,6 +7,7 @@
                         "type": "string"
                     },
                     "profile_pic_url": {
+                        "format": "url",
                         "type": "string"
                     },
                     "username": {
@@ -16,6 +17,14 @@
                 "type": "object"
             },
             "appErrors.HTTPError": {
+                "properties": {
+                    "code": {
+                        "type": "integer"
+                    },
+                    "message": {
+                        "type": "string"
+                    }
+                },
                 "type": "object"
             },
             "passwordResetControllers.confirmEmailBody": {
@@ -77,6 +86,13 @@
             "postCommentControllers.authorizeCommentUploadBody": {
                 "properties": {
                     "attachment_mime": {
+                        "enum": [
+                            "image/jpeg",
+                            "image/png",
+                            "image/webp",
+                            "image/avif",
+                            "image/gif"
+                        ],
                         "type": "string"
                     },
                     "attachment_size": {
@@ -105,6 +121,15 @@
                         "uniqueItems": false
                     },
                     "post_type": {
+                        "enum": [
+                            "photo:portrait",
+                            "photo:square",
+                            "photo:landscape",
+                            "video:portrait",
+                            "video:square",
+                            "video:landscape",
+                            "reel"
+                        ],
                         "type": "string"
                     }
                 },
@@ -113,9 +138,11 @@
             "postCommentService.AuthCommAttDataT": {
                 "properties": {
                     "attachmentCloudName": {
+                        "format": "path",
                         "type": "string"
                     },
                     "uploadUrl": {
+                        "format": "url",
                         "type": "string"
                     }
                 },
@@ -124,9 +151,11 @@
             "postCommentService.AuthPostMediaDataT": {
                 "properties": {
                     "mediaCloudName": {
+                        "format": "path",
                         "type": "string"
                     },
                     "uploadUrl": {
+                        "format": "url",
                         "type": "string"
                     }
                 },
@@ -158,6 +187,7 @@
             "signupControllers.registerUserBody": {
                 "properties": {
                     "bio": {
+                        "maxLength": 150,
                         "type": "string"
                     },
                     "birthday": {
@@ -223,9 +253,27 @@
                 "type": "object"
             },
             "userControllers.changeProfilePictureBody": {
+                "properties": {
+                    "profile_pic_cloud_name": {
+                        "format": "path",
+                        "type": "string"
+                    }
+                },
                 "type": "object"
             },
             "userControllers.editProfileBody": {
+                "properties": {
+                    "bio": {
+                        "maxLength": 150,
+                        "type": "string"
+                    },
+                    "birthday": {
+                        "type": "integer"
+                    },
+                    "name": {
+                        "type": "string"
+                    }
+                },
                 "type": "object"
             }
         },
